--- a/src/main/js/src/App.css
+++ b/src/main/js/src/App.css
@@ -1,28 +1,13 @@
-.App {
-  text-align: center;
+input.field {
+    width: 90%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+table {
+    border-collapse: collapse;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+td, th {
+    border: 1px solid #999;
+    padding: 0.5rem;
+    text-align: left;
 }
