--- a/src/main/js/src/App.css
+++ b/src/main/js/src/App.css
@@ -1,9 +1,27 @@
 .App {
-    
+
+}
+
+.SatelliteList {
+    display: flex;
+    justify-content: center;
+
+}
+
+.MapContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.Map {
+    width: 70%;
 }
 
 table {
     border-collapse: collapse;
+    align-self: center;
+    margin: 10px;
 }
 
 td, th {
