--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,13 +3,13 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>SatApp</title>
-    <!--<link rel="stylesheet" href="/main.css" />-->
+    <link rel="stylesheet" href="css/main.40664b41.css" />
 </head>
 <body>
 
-    <div id="react"></div>
+    <div id="root"></div>
 
-    <script src="build/bundle.js"></script>
+    <script src="js/main.aacafd26.js"></script>
 
 </body>
 </html>
